<?xml version="1.0"?>
<package>
  <name>rviz_semap_plugin</name>
  <version>0.1.0</version>
  <description>GUIs for the SEMAP project.</description>
  <author email="hdeeken@uos.de">Henning Deeken</author>
  <maintainer email="hdeeken@uos.de">Henning Deeken</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rviz_semap_plugins</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mesh_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>interactive_markers</build_depend>
  
  <build_depend>lvr_ros</build_depend>
  <build_depend>semap</build_depend>
  <build_depend>semap_ros</build_depend>
  <build_depend>semap_env</build_depend>
  
  <build_depend>python_qt_binding</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mesh_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>interactive_markers</run_depend>
  
  <run_depend>lvr_ros</run_depend>
  <run_depend>semap</run_depend>
  <run_depend>semap_ros</run_depend>
  <run_depend>semap_env</run_depend>
  
  <run_depend>python_qt_binding</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
  
</package>
